# lab_rab_9_1

./: pyproject.toml
app/: main.py  models.py
app/core/: config.py
app/modules/divisions/: views.py
app/modules/employees/: schema.py  views.py
app/modules/jobs/: views.py
app/modules/positions/: views.py
migrations/: env.py
migrations/versions/: 0abe3e743913_1_migration.py  982a125eceda_2_migration.py  adf199a1300f_init_migration.py
